Сделал первое задание

--- a/src/components/LabelConvertHexToRgb/index.module.css
+++ b/src/components/LabelConvertHexToRgb/index.module.css
@@ -1,4 +1,11 @@
 .body {
-    margin: 10px;
-    padding: 0;
+	background: #212636;
+	color: white;
+
+	border: 3px solid black;
+	display: inline-block;
+	font-weight: bold;
+	width: 189px;
+	padding: 7px 0px;
+	opacity: 0.9;
 }
