--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,12 @@
 .app {
-  text-align: center;
+  width: 98vw;
+  height: 97vh;
 }
 
 .content {
-  padding: 10px;
   text-align: center;
+  width: 100%;
+  height: 90vh;
 }
 
 .header {
