--- a/src/components/ColorHexEdit/index.module.css
+++ b/src/components/ColorHexEdit/index.module.css
@@ -1,4 +1,9 @@
 .body {
-    margin: 10px;
-    padding: 0;
+	margin: 10px;
+	padding: 0;
+}
+
+.body input {
+	text-align: center;
+	padding: 10px;
 }
