--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  min-height: 100vh;
+  height: 100vh;
+}
+
+#root {
+  min-height: 100vh;
+  height: 100vh;
 }
 
 code {
