--- a/src/pages/PageSteps/FormSteps/index.module.css
+++ b/src/pages/PageSteps/FormSteps/index.module.css
@@ -1,4 +1,26 @@
 .body {
-    margin: 10px;
+    margin: 10px 0px;
     padding: 0;
+    width: 100%;
+}
+
+.body button {
+    border-radius: 10px; 
+    width: 85px;
+    height: 45px;
+    background-color: white;
+}
+
+.body table td {
+    vertical-align: bottom;
+    text-align: center;
+}
+
+.tdLabel {
+    width: 100%;
+}
+
+.tdButton {
+    width: 85px;
+    height: 45px;
 }
