--- a/src/pages/PageSteps/GridSteps/index.module.css
+++ b/src/pages/PageSteps/GridSteps/index.module.css
@@ -1,4 +1,21 @@
 .body {
-    margin: 10px;
+    margin: 0;
     padding: 0;
+    width: 100%;
+}
+
+.body td {
+    padding: 5px;
+    width: 33%;
+}
+
+.body tbody {
+    box-shadow: 0 0 0 2px black;
+    border-radius: 10px; 
+}
+
+.body button {
+    background-color: white;
+    border: 0;
+    cursor: pointer;
 }
