--- a/src/pages/PagePhoto/index.module.css
+++ b/src/pages/PagePhoto/index.module.css
@@ -1,8 +1,43 @@
 .body {
-    margin: 10px;
-    padding: 0;
+	margin: 10px;
+	padding: 0;
+	height: 100%;
+
+	background: linear-gradient( #ededee, transparent 2px), linear-gradient( 90deg, #bbb, transparent 1px);
+	background-size: 20px 20px;
+	background-position: left top;
+
+	text-align: center;
+}
+
+.cellsBig {
+	margin: 0px;
+	height: 100%;
+	width: 100%;
+
+	background: linear-gradient( #ededee, transparent 5px), linear-gradient( 90deg, #bbb, transparent 1px);
+	background-size: 100px 100px;
+	background-position: left top;
+}
+
+.fileInput {
+	margin: auto;
+	width: 80%;
+	height: 30%;
+	background-color: white;
+	text-align: center;
+
+	box-shadow: 0 0 0 1px black;
+	border-radius: 20px; 
+
+	font-size: x-large;
 }
 
 .fileText {
-    pointer-events: none;
+	/* pointer-events: none; */
+
+	height: 10em;
+	display: flex;
+	align-items: center;
+	justify-content: center
 }
