--- a/src/components/ImagePreview/index.module.css
+++ b/src/components/ImagePreview/index.module.css
@@ -1,4 +1,30 @@
 .body {
-    margin: 10px;
-    padding: 0;
+	margin: 60px;
+	padding: 0;
+	height: 170px;
+	width: 170px;
+
+	box-shadow: 0 0 0 1px black;
+	border-radius: 20px; 
+
+	/* display: inline-block; */
+}
+
+
+.image {
+	height: 170px;
+	width: 170px;
+}
+
+.buttonClose {
+	height: 30px;
+	width: 30px;
+
+	position: relative;
+	top: -10px;
+	left: 120px;
+	opacity: 0.8;  /* для демонстрации  */  
+	box-shadow: 0 0 0 1px black;
+	border-radius: 30px; 
+	
 }
