--- a/src/components/ImagePreview/index.module.css
+++ b/src/components/ImagePreview/index.module.css
@@ -1,5 +1,5 @@
 .body {
-	margin: 60px;
+	margin: 60px 60px 0px 0px;
 	padding: 0;
 	height: 170px;
 	width: 170px;
@@ -12,8 +12,10 @@
 
 
 .image {
-	height: 170px;
-	width: 170px;
+	height: 166px;
+	width: 166px;
+	margin: 2px;
+	border-radius: 20px; 
 }
 
 .buttonClose {
@@ -21,9 +23,10 @@
 	width: 30px;
 
 	position: relative;
-	top: -10px;
-	left: 120px;
-	opacity: 0.8;  /* для демонстрации  */  
+	top: -185px;
+	left: 80px;
+	border-color: white;
+
 	box-shadow: 0 0 0 1px black;
 	border-radius: 30px; 
 	
