--- a/src/components/Watches/index.module.css
+++ b/src/components/Watches/index.module.css
@@ -2,6 +2,17 @@
 	margin: 10px;
 	padding: 0;
 }
+
+.buttonClose {
+    border-radius: 1.5em;
+    background-color: #fff;
+    box-shadow: inset 0 0 0 0.02em #000;
+    position: relative;
+    padding: 5px 8px;
+    top: 100px;
+    left: 90px;
+}
+
 .clock {
     box-shadow: inset 0 0 0 0.02em #000;
     display: inline-block;
