--- a/src/pages/WatchesPages/FormWatches/index.module.css
+++ b/src/pages/WatchesPages/FormWatches/index.module.css
@@ -1,4 +1,13 @@
 .body {
+	
 	margin: 10px;
-	padding: 0;
+	display: flex;
+    flex-direction: row;
+    justify-content:flex-start;
+}
+
+.addButton {
+	margin-top: 63px;
+	height: 35px;
+	width: 100px;
 }
